--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,24 @@
 {
-  "name": "שם האפליקציה הארוך",
-  "short_name": "שם קצר",
-  "description": "תיאור האפליקציה",
-  "start_url": "/index.html",
+  "name": "MathStudio Pro",
+  "short_name": "MathStudio",
+  "description": "מחשבון מדעי מתקדם עם לוח ציור ולימוד מתמטיקה",
+  "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#000000",
+  "background_color": "#f8f9ff",
+  "theme_color": "#6750a4",
+  "orientation": "any",
   "icons": [
     {
       "src": "icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
