--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,129 @@
 {
+
+  "id": "/?homescreen=1",
+
   "name": "MathStudio Pro",
+
   "short_name": "MathStudio",
+
   "description": "מחשבון מדעי מתקדם עם לוח ציור ולימוד מתמטיקה",
-  "start_url": "index.html",
+
+  "start_url": "/",
+
+  "scope": "/",
+
   "display": "standalone",
+
   "background_color": "#f8f9ff",
+
   "theme_color": "#6750a4",
+
   "orientation": "any",
+
+  "lang": "he",
+
+  "dir": "rtl",
+
   "icons": [
+
     {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+
+      "src": "icon-72.png",
+
+      "sizes": "72x72",
+
+      "type": "image/png"
+
     },
+
     {
-      "src": "icon-512.png",
-      "sizes": "512x512",
+
+      "src": "icon-96.png",
+
+      "sizes": "96x96",
+
+      "type": "image/png"
+
+    },
+
+    {
+
+      "src": "icon-144.png",
+
+      "sizes": "144x144",
+
+      "type": "image/png"
+
+    },
+
+    {
+
+      "src": "icon-192.png",
+
+      "sizes": "192x192",
+
       "type": "image/png",
+
       "purpose": "any maskable"
+
+    },
+
+    {
+
+      "src": "icon-256.png",
+
+      "sizes": "256x256",
+
+      "type": "image/png"
+
+    },
+
+    {
+
+      "src": "icon-512.png",
+
+      "sizes": "512x512",
+
+      "type": "image/png",
+
+      "purpose": "any maskable"
+
     }
-  ]
+
+  ],
+
+  "screenshots": [
+
+    {
+
+      "src": "screenshot1.png",
+
+      "sizes": "1280x720",
+
+      "type": "image/png",
+
+      "form_factor": "wide",
+
+      "label": "Calculator Screen"
+
+    },
+
+    {
+
+      "src": "screenshot2.png",
+
+      "sizes": "720x1280",
+
+      "type": "image/png",
+
+      "form_factor": "narrow",
+
+      "label": "Painter Screen"
+
+    }
+
+  ],
+
+  "categories": ["education", "utilities"]
+
 }
