--- a/manifest.json
+++ b/manifest.json
@@ -1,86 +1,33 @@
 {
-  "id": "/?homescreen=1",
   "name": "MathStudio Pro",
   "short_name": "MathStudio",
-  "description": "מחשבון מדעי מתקדם הכולל לוח ציור אינטראקטיבי לפתרון תרגילים ולימוד מתמטיקה בצורה ויזואלית.",
+  "description": "מחשבון מדעי ולוח ציור מתקדם",
   "start_url": "./index.html",
-  "scope": "./",
   "display": "standalone",
   "background_color": "#f8f9ff",
   "theme_color": "#6750a4",
-  "orientation": "any",
-  "lang": "he",
-  "dir": "rtl",
-  "categories": ["education", "utilities"],
-  "launch_handler": {
-    "client_mode": "navigate-existing"
-  },
-  "edge_side_panel": {
-    "preferred_width": 400
-  },
-  "display_override": ["window-controls-overlay", "minimal-ui"],
+  "orientation": "portrait",
   "icons": [
-    { "src": "icon-72.png", "sizes": "72x72", "type": "image/png" },
-    { "src": "icon-96.png", "sizes": "96x96", "type": "image/png" },
-    { "src": "icon-144.png", "sizes": "144x144", "type": "image/png" },
-    { "src": "icon-192.png", "sizes": "192x192", "type": "image/png", "purpose": "any maskable" },
-    { "src": "icon-256.png", "sizes": "256x256", "type": "image/png" },
-    { "src": "icon-512.png", "sizes": "512x512", "type": "image/png", "purpose": "any maskable" }
-  ],
-  "shortcuts": [
     {
-      "name": "מחשבון",
-      "short_name": "מחשבון",
-      "description": "פתח את המחשבון המדעי",
-      "url": "./index.html?mode=calc",
-      "icons": [{ "src": "icon-96.png", "sizes": "96x96" }]
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "name": "לוח ציור",
-      "short_name": "ציור",
-      "description": "פתח לוח חלק לציור",
-      "url": "./index.html?mode=draw",
-      "icons": [{ "src": "icon-96.png", "sizes": "96x96" }]
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "share_target": {
     "action": "./index.html",
     "method": "GET",
-    "enctype": "application/x-www-form-urlencoded",
     "params": {
       "title": "title",
       "text": "text",
       "url": "url"
     }
-  },
-  "screenshots": [
-    {
-      "src": "mobile-1.png",
-      "sizes": "1080x2408",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "ממשק המחשבון במובייל"
-    },
-    {
-      "src": "mobile-2.png",
-      "sizes": "1080x2408",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "לוח הציור במובייל"
-    },
-    {
-      "src": "desktop-1.png",
-      "sizes": "2408x1080",
-      "type": "image/png",
-      "form_factor": "wide",
-      "label": "תצוגת מחשב רחבה - מחשבון"
-    },
-    {
-      "src": "desktop-2.png",
-      "sizes": "2408x1080",
-      "type": "image/png",
-      "form_factor": "wide",
-      "label": "תצוגת מחשב רחבה - לוח ציור"
-    }
-  ]
+  }
 }
